Created back-end and show history high score

--- a/game/templates/tinyHeart.html
+++ b/game/templates/tinyHeart.html
@@ -43,19 +43,21 @@
                 <canvas id="canvas2" width="800" height="600"></canvas>
             </div>
         </div>
-        <p>history</p>
-{#        <script type="text/javascript" src="/game/static/game/js/main.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/commonFunctions.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/background.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/ane.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/fruit.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/bigFish.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/collision.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/baby.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/data.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/wave.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/waveRed.js"></script>#}
-{#        <script type="text/javascript" src="/game/static/game/js/dust.js"></script>#}
+        <h3>history high:  {{ history_high }}</h3><br>
+        <h3>friends</h3>
+        {% for friend in friends %}
+            <h4>{{ friend.username }}   {{ friend.history_high }}</h4>
+        {% endfor %}
+        <p>请输入两个数字</p>
+        <form action="/add/" method="get">
+            a: <input type="text" id="a" name="a"> <br>
+            b: <input type="text" id="b" name="b"> <br>
+            <p>result: <span id='result'></span></p>
+            <button type="button" id='sum'>提交</button>
+        </form>
+
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+        <script>!window.jQuery && document.write(unescape('%3Cscript src="{% static 'game/js/jquery-3.3.1.min.js' %}"%3E%3C/script%3E'))</script>
         <script type="text/javascript" src="{% static 'game/js/main.js' %}"></script>
         <script type="text/javascript" src="{% static 'game/js/commonFunctions.js' %}"></script>
         <script type="text/javascript" src="{% static 'game/js/background.js' %}"></script>
@@ -68,5 +70,32 @@
         <script type="text/javascript" src="{% static 'game/js/wave.js' %}"></script>
         <script type="text/javascript" src="{% static 'game/js/waveRed.js' %}"></script>
         <script type="text/javascript" src="{% static 'game/js/dust.js' %}"></script>
+        <script>
+            $(document).ready(function () {
+                var high = {{ history_high | safe }};
+                game(high);
+            });
+        </script>
+        <script>
+            $(document).ready(function(){
+              $("p").click(function(){
+                $(this).hide();
+              });
+            });
+        </script>
+        <script>
+            $(document).ready(function(){
+              $("#sum").click(function(){
+                var a = $("#a").val();
+                var b = $("#b").val();
+
+                $.get("/add/",{'a':a,'b':b}, function(ret){
+                    $('#result').html(ret)
+                })
+              });
+            });
+        </script>
+
+        <p>try click</p>
 </body>
 </html>
