--- a/game/templates/tinyHeart.html
+++ b/game/templates/tinyHeart.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>tinyHeart</title>
     <style type="text/css">
@@ -34,29 +35,7 @@
             z-index: 0;
         }
     </style>
-
-</head>
-<body>
-        <div class="all_bg">
-            <div id="allcanvas">
-                <canvas id="canvas1" width="800" height="600"></canvas>
-                <canvas id="canvas2" width="800" height="600"></canvas>
-            </div>
-        </div>
-        <h3>history high:  {{ history_high }}</h3><br>
-        <h3>friends</h3>
-        {% for friend in friends %}
-            <h4>{{ friend.username }}   {{ friend.history_high }}</h4>
-        {% endfor %}
-        <p>请输入两个数字</p>
-        <form action="/add/" method="get">
-            a: <input type="text" id="a" name="a"> <br>
-            b: <input type="text" id="b" name="b"> <br>
-            <p>result: <span id='result'></span></p>
-            <button type="button" id='sum'>提交</button>
-        </form>
-
-        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
         <script>!window.jQuery && document.write(unescape('%3Cscript src="{% static 'game/js/jquery-3.3.1.min.js' %}"%3E%3C/script%3E'))</script>
         <script type="text/javascript" src="{% static 'game/js/main.js' %}"></script>
         <script type="text/javascript" src="{% static 'game/js/commonFunctions.js' %}"></script>
@@ -70,19 +49,54 @@
         <script type="text/javascript" src="{% static 'game/js/wave.js' %}"></script>
         <script type="text/javascript" src="{% static 'game/js/waveRed.js' %}"></script>
         <script type="text/javascript" src="{% static 'game/js/dust.js' %}"></script>
-        <script>
+    <script>
             $(document).ready(function () {
                 var high = {{ history_high | safe }};
-                game(high);
+                set_high(high);
+                game();
             });
-        </script>
-        <script>
             $(document).ready(function(){
-              $("p").click(function(){
-                $(this).hide();
+              $("#sum").click(function(){
+                  var id = {{ user_id | safe }}
+
+                $.get("/get_high/",{'id':id }, function(ret){
+                    set_high(ret);
+{#                    alert(ret);#}
+                })
               });
             });
-        </script>
+{#            function getUrlPara(paraName){#}
+{#                var sUrl  =  location.href;#}
+{#                var sReg  =  "(?://?|&){1}"+paraName+"=([^&]*)"#}
+{#                var re=new RegExp(sReg,"gi");#}
+{#                re.exec(sUrl);#}
+{#                return RegExp.$1;#}
+{#            }#}
+    </script>
+</head>
+<body>
+        <div class="all_bg">
+            <div id="allcanvas">
+                <canvas id="canvas1" width="800" height="600"></canvas>
+                <canvas id="canvas2" width="800" height="600"></canvas>
+            </div>
+        </div>
+        <h3>history high:  {{ history_high }}</h3><br>
+        <h3>friends</h3>
+        {% for friend in friends %}
+            <h4>{{ friend.username }}   {{ friend.history_high }}</h4>
+        {% endfor %}
+
+        <p>请输入两个数字</p>
+        <form action="/add/" method="get">
+            a: <input type="text" id="a" name="a"> <br>
+            b: <input type="text" id="b" name="b"> <br>
+            <p>result: <span id='result'></span></p>
+            <button type="button" id='sum'>提交</button>
+        </form>
+
+
+
         <script>
             $(document).ready(function(){
               $("#sum").click(function(){
@@ -92,6 +106,20 @@
                 $.get("/add/",{'a':a,'b':b}, function(ret){
                     $('#result').html(ret)
                 })
+              });
+            });
+        </script>
+
+        <script>
+            $(document).ready(function(){
+              $("#sum").click(function(){
+                var a = $("#a").val();
+                var b = $("#b").val();
+
+                $.get("/add/",{'a':a,'b':b}, function(ret){
+                    $('#result').html(ret)
+                })
+                  alert(getUrlPara("a"));
               });
             });
         </script>
