--- a/backEnd/templates/online/index.html
+++ b/backEnd/templates/online/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>餐厅管理系统</title>
+    <title>HappyFish</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +10,9 @@
     <meta name="author" content="GraphBerry.com"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/static/tem2/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="/static/tem2/css/magnific-popup.css">
-    <link rel="stylesheet" type="text/css" href="/static/tem2/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../static/tem2/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../../static/tem2/css/magnific-popup.css">
+    <link rel="stylesheet" type="text/css" href="../../static/tem2/css/style.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
   <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-            <img src="/static/tem2/img/octopus.png" alt="Octopus logo" />
+            <img src="../../static/tem2/img/octopus.png" alt="Octopus logo" />
         </a>
         </div>
     <div class="primary-menu">
@@ -35,7 +35,7 @@
              <ul class="nav navbar-nav">
                 <li><a data-scroll href="#">主页</a></li>
                 <li><a data-scroll href="#login">登录</a></li>
-                <li><a href="{% url 'online:register_page'%}">注册</a></li>
+                <li><a href="{% url 'backEnd:register_page'%}">注册</a></li>
             </ul>
         </div>
     </div>
@@ -50,7 +50,7 @@
                 <h4>八爪鱼</h4>
                 <div class="divider"></div>
                 <h1>餐厅自动化管理系统</h1>
-                <a href="{% url 'customer_service:customer_welcome'%}" class="btn btn-primary btn-lg">餐桌自助服务终端</a>
+{#                <a href="{% url 'customer_service:customer_welcome'%}" class="btn btn-primary btn-lg">餐桌自助服务终端</a>#}
             </div>
         </div>
     </div>
@@ -70,28 +70,28 @@
             </div>
         </div>
 
-    <form style="width: auto" action="{% url 'online:login'%}" method="post">
-        {% csrf_token %}
-       <div class="text-center" >
-           <div class="form-group text-center">
-               <input type="text" name="username" class="form-control" placeholder="用户名*">
-           </div>
-           <div class="form-group text-center">
-               <input type="text" name="password" class="form-control" placeholder="密码*">
-           </div>
-
-        </div><br>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <button type="submit" class="btn btn-primary" name="sub">登录</button>
-            </div>
-        </div>
-    </form><br><br>
-        <div class="row" >
-            <div class="col-md-12 text-center">
-                <a type="submit" class="btn btn-primary" href="{% url 'online:register_page'%}">注册</a>
-            </div>
-        </div>
+{#    <form style="width: auto" action="{% url 'online:login'%}" method="post">#}
+{#        {% csrf_token %}#}
+{#       <div class="text-center" >#}
+{#           <div class="form-group text-center">#}
+{#               <input type="text" name="username" class="form-control" placeholder="用户名*">#}
+{#           </div>#}
+{#           <div class="form-group text-center">#}
+{#               <input type="text" name="password" class="form-control" placeholder="密码*">#}
+{#           </div>#}
+{##}
+{#        </div><br>#}
+{#        <div class="row">#}
+{#            <div class="col-md-12 text-center">#}
+{#                <button type="submit" class="btn btn-primary" name="sub">登录</button>#}
+{#            </div>#}
+{#        </div>#}
+{#    </form><br><br>#}
+{#        <div class="row" >#}
+{#            <div class="col-md-12 text-center">#}
+{#                <a type="submit" class="btn btn-primary" href="{% url 'online:register_page'%}">注册</a>#}
+{#            </div>#}
+{#        </div>#}
 </div>
 
 </section>
@@ -99,16 +99,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-            <img src="/static/tem2/img/logo-white.png" class="logo-footer" />
+            <img src="../../static/tem2/img/logo-white.png" class="logo-footer" />
                 <p>presented by 刘一宁，牛现坤，严熊白雪 </p>
             </div>
         </div>
     </div>
 </footer>
-<script src="/static/tem2/js/jquery.mixitup.js"></script>
-<script type="text/javascript" src="/static/tem2/js/jquery.magnific-popup.min.js"></script>
-<script type="text/javascript" src="/static/tem2/js/smooth-scroll.js"></script>
-<script src="/static/tem2/js/custom.js"></script>
+<script src="../../static/tem2/js/jquery.mixitup.js"></script>
+<script type="text/javascript" src="../../static/tem2/js/jquery.magnific-popup.min.js"></script>
+<script type="text/javascript" src="../../static/tem2/js/smooth-scroll.js"></script>
+<script src="../../static/tem2/js/custom.js"></script>
 </body>
 </html>
 
