--- a/backEnd/templates/online/register_page.html
+++ b/backEnd/templates/online/register_page.html
@@ -10,9 +10,9 @@
     <meta name="author" content="GraphBerry.com"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/static/tem2/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="/static/tem2/css/magnific-popup.css">
-    <link rel="stylesheet" type="text/css" href="/static/tem2/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../static/tem2/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../../static/tem2/css/magnific-popup.css">
+    <link rel="stylesheet" type="text/css" href="../../static/tem2/css/style.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
   <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-            <img src="/static/tem2/img/octopus.png" alt="Octopus logo" />
+            <img src="../../static/tem2/img/octopus.png" alt="Octopus logo" />
         </a>
     </div>
     <div class="primary-menu">
@@ -33,7 +33,7 @@
         </button>
         <div id="navbar" class="navbar-collapse collapse">
              <ul class="nav navbar-nav">
-                <li><a  href="{% url 'online:online_page'%}">主页</a></li>
+                <li><a  href="{% url 'backEnd:online_page'%}">主页</a></li>
                 <li><a data-scroll href="#portfolio">Portfolio</a></li>
                 <li><a data-scroll href="#about">About</a></li>
                 <li><a data-scroll href="#register">注册</a></li>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-    <form style="width: auto" action="{% url 'online:register'%}" method="post">
+    <form style="width: auto" action="{% url 'backEnd:register'%}" method="post">
         {% csrf_token %}
        <div class="text-center" >
            <div class="form-group text-center">
@@ -86,7 +86,7 @@
     </form><br><br>
         <div class="row" >
             <div class="col-md-12 text-center">
-                <a type="submit" class="btn btn-primary" href="{% url 'online:online_page'%}">返回</a>
+                <a type="submit" class="btn btn-primary" href="{% url 'backEnd:online_page'%}">返回</a>
             </div>
         </div>
 </div>
@@ -96,16 +96,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-            <img src="/static/tem2/img/logo-white.png" class="logo-footer" />
+            <img src="../../static/tem2/img/logo-white.png" class="logo-footer" />
                 <p>presented by 刘一宁，牛现坤，严熊白雪 </p>
             </div>
         </div>
     </div>
 </footer>
-<script src="/static/tem2/js/jquery.mixitup.js"></script>
-<script type="text/javascript" src="/static/tem2/js/jquery.magnific-popup.min.js"></script>
-<script type="text/javascript" src="/static/tem2/js/smooth-scroll.js"></script>
-<script src="/static/tem2/js/custom.js"></script>
+<script src="../../static/tem2/js/jquery.mixitup.js"></script>
+<script type="text/javascript" src="../../static/tem2/js/jquery.magnific-popup.min.js"></script>
+<script type="text/javascript" src="../../static/tem2/js/smooth-scroll.js"></script>
+<script src="../../static/tem2/js/custom.js"></script>
 </body>
 </html>
 
