--- a/backEnd/templates/online/register_page.html
+++ b/backEnd/templates/online/register_page.html
@@ -67,13 +67,13 @@
            <div class="form-group text-center">
                <input type="text" name="password" class="form-control" placeholder="密码*">
            </div>
-           <div class="form-group text-center">
-               <select type="text" name="type_" class="form-control">
-                {% for x in type_list %}
-                <option value ="{{ x }}">{{ x }}</option>
-                {% endfor %}
-                </select>
-           </div>
+{#           <div class="form-group text-center">#}
+{#               <select type="text" name="type_" class="form-control">#}
+{#                {% for x in type_list %}#}
+{#                <option value ="{{ x }}">{{ x }}</option>#}
+{#                {% endfor %}#}
+{#                </select>#}
+{#           </div>#}
 
 
 
