--- a/game/templates/gamer_main.html
+++ b/game/templates/gamer_main.html
@@ -120,9 +120,6 @@
              <ul class="nav navbar-nav" >
                 <li><a href="{% url 'backEnd:online_page'%}">main page</a></li>
                  <li><a href="{% url 'game:friend_list' user_id%}">friends</a></li>
-{#                <li><a href="{% url 'customer_service:call_serve' table_id%}">呼叫服务</a></li>#}
-{#                <li><a href="{% url 'customer_service:order_list' table_id%}">查看订单状态</a></li>#}
-{#                <li><a href="{% url 'customer_service:bill_list' table_id%}">查看账单及结账</a></li>#}
             </ul>
         </div>
     </div>
@@ -134,9 +131,9 @@
      <div style="color:whitesmoke"  class="container">
          <div class="row">
             <div  class="col-md-8 col-md-offset-2" >
-                <h4>八爪鱼餐厅</h4>
+                <h4>Get higher score and share with your friends!</h4>
                 <div class="divider"></div>
-                <h1 style="color:whitesmoke">餐桌自助终端</h1>
+                <h1 style="color:whitesmoke">Happy Fish</h1>
 {#                <a style="color:whitesmoke" href="{% url 'customer_service:dish_list' table_id%}" class="btn btn-primary btn-lg">点餐入口</a>#}
 {#                <a style="color:whitesmoke" href="{% url 'customer_service:call_serve' table_id%}" class="btn btn-primary btn-lg">呼叫服务</a>#}
 {#                <a style="color:whitesmoke" href="{% url 'customer_service:order_list' table_id%}" class="btn btn-primary btn-lg">查看订单状态</a>#}
