--- a/game/templates/gamer_main.html
+++ b/game/templates/gamer_main.html
@@ -28,7 +28,7 @@
         }
         #allcanvas{
             position: relative;
-            bottom:-100px;
+            bottom:-70px;
             width: 800px;
             height: 600px;
             margin: 0;
@@ -46,6 +46,8 @@
             bottom: 0;
             left: 0;
             z-index: 0;
+            opacity:0.9;
+            filter:alpha(opacity=90);
         }
     </style>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
