--- a/backEnd/static/tem2/css/style.css
+++ b/backEnd/static/tem2/css/style.css
@@ -23,7 +23,7 @@ header{
 	text-align: center;
 	margin-bottom: 0;
 	position: relative;
-	background-image: url(../img/header.jpg);
+	background-image: url(../img/fishes-background.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
