--- a/game/static/tem2/css/style1.css
+++ b/game/static/tem2/css/style1.css
@@ -23,7 +23,7 @@ header{
 	text-align: center;
 	margin-bottom: 0;
 	position: relative;
-	background-image: url(../img/header1.png);
+	background-image: url(../img/game-header.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
