--- a/game/templates/friend_list.html
+++ b/game/templates/friend_list.html
@@ -60,9 +60,10 @@
         </button>
         <div id="navbar" class="navbar-collapse collapse" >
          <ul class="nav navbar-nav" >
-             <li><a href="{% url 'game:friend_list' i_user_id%}">friends</a></li>
+             <li><a href="{% url 'game:friend_list1' cryed_user_id%}">friends</a></li>
 {#             <li><a href="{% url 'game:game_view' i_user_id%}">back to game</a></li>#}
-             <li><a href="{% url 'backEnd:logout_user' i_user_id%}">log off</a></li>
+{#             <li><a href="{% url 'backEnd:logout_user' i_user_id%}">log off</a></li>#}
+             <li><a href="{% url 'backEnd:logout_user1' cryed_user_id%}">log off</a></li>
          </ul>
         </div>
     </div>
@@ -106,11 +107,8 @@
         <th class="text-center">rank</th>
         <th class="text-center">friend</th>
         <th class="text-center">score</th>
+        <th class="text-center">online status</th>
         <th class="text-center">delete</th>
-{#        <th class="text-center">状态</th>#}
-{#        <th class="text-center">烹饪</th>#}
-{#        <th class="text-center">完成烹饪</th>#}
-{#        <th class="text-center">下单时间</th>#}
     </tr>
     </thead>
         <tbody>
@@ -121,6 +119,7 @@
             </td>
             <td>{{ friend.username }}</td>
             <td>{{ friend.history_high }}</td>
+            <td>{{ friend.online }}</td>
             {% ifnotequal i_user_id friend.user_id %}
             <td><a class="btn btn-info" href="{% url 'game:del_friend' user_id friend.user_id%}">Delete</a></td>
             {% endifnotequal %}
