--- a/game/templates/gamer_main.html
+++ b/game/templates/gamer_main.html
@@ -121,7 +121,7 @@
         <div id="navbar" class="navbar-collapse collapse" >
              <ul class="nav navbar-nav" >
                 <li><a href="{% url 'backEnd:online_page'%}">main page</a></li>
-                 <li><a href="{% url 'game:friend_list' user_id%}">friends</a></li>
+                 <li><a href="{% url 'game:friend_list1' cryed_user_id%}">friends</a></li>
             </ul>
         </div>
     </div>
