check exist friends

--- a/game/templates/friend_list.html
+++ b/game/templates/friend_list.html
@@ -63,6 +63,7 @@
              <li><a href="{% url 'game:friend_list1' cryed_user_id%}">friends</a></li>
 {#             <li><a href="{% url 'game:game_view' i_user_id%}">back to game</a></li>#}
 {#             <li><a href="{% url 'backEnd:logout_user' i_user_id%}">log off</a></li>#}
+             <li><a href="{% url 'backEnd:online_page'%}">main page</a></li>
              <li><a href="{% url 'backEnd:logout_user1' cryed_user_id%}">log off</a></li>
          </ul>
         </div>
