--- a/game/templates/gamer_main.html
+++ b/game/templates/gamer_main.html
@@ -122,6 +122,7 @@
              <ul class="nav navbar-nav" >
                 <li><a href="{% url 'backEnd:online_page'%}">main page</a></li>
                  <li><a href="{% url 'game:friend_list1' cryed_user_id%}">friends</a></li>
+                 <li><a href="{% url 'backEnd:logout_user1' cryed_user_id%}">log off</a></li>
             </ul>
         </div>
     </div>
